--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Javascript Demo</title>
+    <title>Sledgehammer Projections</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 
 
 <body>
-    <h1>Bootstrap Javascript Demo</h1>
+    <h1>Sledgehammer Productions</h1>
 
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
