--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,7 +14,10 @@
   </head>
 
 <body>
-    <h1>Sledgehammer Productions</h1>
+    <div class="jumbotron">
+      <h1>Sledgehammer Productions <small>Video Production and Marketing</small></h1>
+      <p>Caption goes here</p>
+    </div>
 
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
