--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="jumbotron">
-      <h1>Sledgehammer Productions <small>Video Production and Marketing</small></h1>
-      <p>Caption goes here</p>
+      <h1>Sledgehammer Productions</h1>
+      <p>Video Production and Marketing</p>
     </div>
 
 
