--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   </head>
 
 <body>
+ 
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="active"><a href="#">Home</a></li>
+    <li><a href="#">Our Work</a></li>
+    <li><a href="#">Testimonials</a></li>
+    <li><a href="#">Get a Quote!</a></li>
+    <li><a href="vimeo.com/sledgehammerpro">Vimeo</a></li>
+  </ul>
+
     <div class="jumbotron">
       <h1>Sledgehammer Productions</h1>
       <p>Video Production and Marketing</p>
