--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a href="#">Our Work</a></li>
     <li><a href="#">Testimonials</a></li>
     <li><a href="#">Get a Quote!</a></li>
-    <li><a href="vimeo.com/sledgehammerpro">Vimeo</a></li>
+    <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
   </ul>
 
     <div class="jumbotron">
