--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Our Work</a></li>
     <li><a href="#">Testimonials</a></li>
+  </ul>
+  <ul class="nav navbar-nav navbar-right">
     <li><a href="#">Get a Quote!</a></li>
     <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
   </ul>
