--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
  
-  <ul class="navbar navbar-default navbar-fixed-top visible-lg visible-md" role="tablist">
+  <ul class="navbar navbar-default navbar-fixed-top" role="tablist">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Our Work</a></li>
     <li><a href="#">Testimonials</a></li>
