--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
  
-  <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+<li class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <ul class="nav navbar-nav">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Our Work</a></li>
     <li><a href="#">Testimonials</a></li>
@@ -24,6 +25,7 @@
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
   </ul>
+</li>
 
     <div class="jumbotron">
       <h1>Sledgehammer Productions</h1>
