--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
  
-<li class="navbar navbar-default navbar-fixed-top" role="navigation">
+<ul class="navbar navbar-default navbar-fixed-top" role="navigation">
   <ul class="nav navbar-nav">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Our Work</a></li>
@@ -25,7 +25,7 @@
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
   </ul>
-</li>
+</ul>
 
 <div class="jumbotron">
   <h1>Sledgehammer Productions</h1>
