--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sledgehammer Projections</title>
 
     <!-- CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
