--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <p>Video Production and Marketing</p>
 </div>
 
-
+<!-- Carousel -->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -78,8 +78,14 @@
         <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
+<!-- End Carousel -->
 
-
+<div class="page-header">
+  <div class="text-center">
+    <h2><em>Always fresh, never frozen.</em></h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vestibulum sagittis risus at finibus. Maecenas vulputate dapibus ligula, eget hendrerit odio tempus quis. Maecenas eu lorem porttitor, condimentum ligula et, scelerisque dolor. Fusce facilisis, tortor at commodo cursus, nisl orci condimentum ipsum, vel dignissim ex lectus sit amet elit. Curabitur efficitur ut dolor sit amet finibus. Nunc egestas pretium dui id aliquam. Praesent iaculis ac justo sed egestas. In hac habitasse platea dictumst. Proin ante felis, tempor nec leo ac, pretium porta diam. Phasellus consequat, arcu ut mattis euismod, augue sem sodales sapien, nec mollis sem purus sit amet libero. Nulla blandit ante eros, vitae ultrices libero pretium et. Quisque imperdiet finibus lectus sed laoreet.</p>
+  </div>
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
