--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
 
 <body>
  
-<ul class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <ul class="nav navbar-nav">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Our Work</a></li>
-    <li><a href="#">Testimonials</a></li>
+<div class="navbar-header">
+  <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Our Work</a></li>
+      <li><a href="#">Testimonials</a></li>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Get a Quote!</a></li>
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
   </ul>
-</ul>
+</div>
 
 <div class="jumbotron">
   <h1>Sledgehammer Productions</h1>
