--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="jumbotron">
-  <h1>Sledgehammer Productions</h1>
+  <h1>Sledgehammer Productions <small>Conceive, Capture, Create</small></h1>
   <p>Video Production and Marketing</p>
 </div>
 
