--- a/index.html
+++ b/index.html
@@ -48,25 +48,24 @@
       <div class="carousel-inner">
 
         <div class="item active">
-          <a href="http://google.com">
-            <img src="http://placehold.it/1400x400/f30/000&text=Slide+One" alt="Slide One">
+            <img src="/img/burningkumquat.gif" alt="Slide One">
           </a>
           <div class="carousel-caption">
-            slide one caption.
+            Promote your cause.
           </div>
         </div>
 
         <div class="item">
-          <img src="http://placehold.it/1400x400/0f3/000&text=Slide+Two" alt="Slide Two">
+          <img src="/img/yakboyfresh.gif" alt="Slide Two">
           <div class="carousel-caption">
-            slide two caption.
+            Record your event.
           </div>
         </div>
 
         <div class="item">
-          <img src="http://placehold.it/1400x400/03f/000&text=Slide+Three" alt="Slide Three">
+          <img src="/img/freeman.gif" alt="Slide Three">
           <div class="carousel-caption">
-            slide three caption.
+            Inspire your community.
           </div>
         </div>
 
