--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="carousel-inner">
 
         <div class="item active">
-            <img src="/img/burningkumquat.gif" alt="Slide One">
+            <img src="/img/BurningKumquat.gif" alt="Slide One">
           </a>
           <div class="carousel-caption">
             Promote your cause.
@@ -56,14 +56,14 @@
         </div>
 
         <div class="item">
-          <img src="/img/yakboyfresh.gif" alt="Slide Two">
+          <img src="/img/Yak.gif" alt="Slide Two">
           <div class="carousel-caption">
             Record your event.
           </div>
         </div>
 
         <div class="item">
-          <img src="/img/freeman.gif" alt="Slide Three">
+          <img src="/img/Freeman.gif" alt="Slide Three">
           <div class="carousel-caption">
             Inspire your community.
           </div>
