--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 </div>
 
 <div class="jumbotron">
-  <h1>Sledgehammer Productions <small>Conceive, Capture, Create</small></h1>
-  <p>Video Production and Marketing</p>
+    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+  
 </div>
 
 <!-- Carousel -->
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <div class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -47,23 +47,23 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
 
-        <div class="item active">
-            <img src="/img/BurningKumquat.gif" alt="Slide One">
+        <div class="item">
+            <img src="img/BurningKumquat.gif" alt="Slide One">
           </a>
           <div class="carousel-caption">
             Promote your cause.
           </div>
         </div>
 
-        <div class="item">
-          <img src="/img/Yak.gif" alt="Slide Two">
+        <div class="item active">
+          <img src="img/Yak.gif" alt="Slide Two">
           <div class="carousel-caption">
             Record your event.
           </div>
         </div>
 
         <div class="item">
-          <img src="/img/Freeman.gif" alt="Slide Three">
+          <img src="img/Freeman.gif" alt="Slide Three">
           <div class="carousel-caption">
             Inspire your community.
           </div>
