--- a/testimonials.html
+++ b/testimonials.html
@@ -36,8 +36,19 @@
 
 <div class="page-header">
   <h2>Testimonials</h2>
+  <br>
   <p>"Morbi eleifend massa nec sem rhoncus, aliquet facilisis lectus ultricies. Curabitur at sapien vel ligula fermentum efficitur at ultricies tortor. Mauris tempus augue in est hendrerit, non maximus sem fringilla. Curabitur dictum nulla diam, non mattis sem mollis et. Suspendisse posuere a nulla vitae efficitur. Cras lacinia, sapien sit amet blandit scelerisque, velit lorem ultricies diam, sed sagittis mauris sapien id lectus. Sed ullamcorper libero mi. Maecenas eu porttitor enim. Phasellus sagittis hendrerit nunc vitae porttitor. Proin eu ligula metus. Aenean commodo justo sapien."</p>
-  <h3>– Bob Jones</h3>
+  <h3>– Bob Jones, Jones Company</h3>
+  <p>"Morbi eleifend massa nec sem rhoncus, aliquet facilisis lectus ultricies. Curabitur at sapien vel ligula fermentum efficitur at ultricies tortor. Mauris tempus augue in est hendrerit, non maximus sem fringilla. Curabitur dictum nulla diam, non mattis sem mollis et. Suspendisse posuere a nulla vitae efficitur. Cras lacinia, sapien sit amet blandit scelerisque, velit lorem ultricies diam, sed sagittis mauris sapien id lectus. Sed ullamcorper libero mi. Maecenas eu porttitor enim. Phasellus sagittis hendrerit nunc vitae porttitor. Proin eu ligula metus. Aenean commodo justo sapien."</p>
+  <h3>– Ben Berman, Human Being</h3>
+  <p>"Morbi eleifend massa nec sem rhoncus, aliquet facilisis lectus ultricies. Curabitur at sapien vel ligula fermentum efficitur at ultricies tortor. Mauris tempus augue in est hendrerit, non maximus sem fringilla. Curabitur dictum nulla diam, non mattis sem mollis et. Suspendisse posuere a nulla vitae efficitur. Cras lacinia, sapien sit amet blandit scelerisque, velit lorem ultricies diam, sed sagittis mauris sapien id lectus. Sed ullamcorper libero mi. Maecenas eu porttitor enim. Phasellus sagittis hendrerit nunc vitae porttitor. Proin eu ligula metus. Aenean commodo justo sapien."</p>
+  <h3>– Steve Jones, Steve Company</h3>
+
+<div class="page-header">
+    <div class="text-center">
+        <a href="#">Contact Us Today</a>
+    </div>
+</div>
 
 
 </div>
