--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <div class="navbar-header">
   <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
       <li><a href="#">Our Work</a></li>
-      <li><a href="#">Testimonials</a></li>
+      <li><a href="testimonials.html">Testimonials</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Get a Quote!</a></li>
@@ -85,6 +85,7 @@
     <h2><em>Always fresh, never frozen.</em></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vestibulum sagittis risus at finibus. Maecenas vulputate dapibus ligula, eget hendrerit odio tempus quis. Maecenas eu lorem porttitor, condimentum ligula et, scelerisque dolor. Fusce facilisis, tortor at commodo cursus, nisl orci condimentum ipsum, vel dignissim ex lectus sit amet elit. Curabitur efficitur ut dolor sit amet finibus.</p>
     <p>Nunc egestas pretium dui id aliquam. Praesent iaculis ac justo sed egestas. In hac habitasse platea dictumst. Proin ante felis, tempor nec leo ac, pretium porta diam. Phasellus consequat, arcu ut mattis euismod, augue sem sodales sapien, nec mollis sem purus sit amet libero. Nulla blandit ante eros, vitae ultrices libero pretium et. Quisque imperdiet finibus lectus sed laoreet.</p>
+  <a href="#">Contact Us Today</a>
   </div>
 </div>
 
