--- a/our_work.html
+++ b/our_work.html
@@ -24,7 +24,7 @@
       <li><a href="testimonials.html">Testimonials</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Get a Quote!</a></li>
+      <li><a href="contact.html">Get a Quote!</a></li>
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
   </ul>
@@ -42,6 +42,23 @@
     </div>
 </div>
 
+<h3>The Burning Kumquat | Washington University in St. Louis</h3>
+<iframe src="//player.vimeo.com/video/106895690" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/106895690">In the Spotlight: The Burning Kumquat</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+<br>
+
+<h3>7th Grade Poetry Foundation | St. Louis, MO</h3>
+<iframe src="//player.vimeo.com/video/104069649" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/104069649">$25 Question: 7th Grade Poetry Foundation</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+<br>
+
+<h3>Freeman Word X Just Kings | St. Louis, MO</h3>
+<iframe src="//player.vimeo.com/video/101581434" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/101581434">These Streets, Abandoned – Freeman Word</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+<br>
+
+<h3>Yak Boy Fresh | St. Louis, MO</h3>
+<iframe src="//player.vimeo.com/video/92685102" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/92685102">Yak Boy Fresh - Pop's</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 </div>
 
