--- a/testimonials.html
+++ b/testimonials.html
@@ -20,11 +20,11 @@
   <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Our Work</a></li>
+      <li><a href="our_work.html">Our Work</a></li>
       <li class="active"><a href="testimonials.html">Testimonials</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Get a Quote!</a></li>
+      <li><a href="contact.html">Get a Quote!</a></li>
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
   </ul>
