--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,17 @@
 </div>
 
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+<p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
 </div>
 
+<div class="container"
 <div class="page-header">
   <h2>Contact Us</h2>
   <p>For more information regarding blah blah blah, contact us today!</p>
   <p>Emma Kane, production and post-production</p>
   <p>443.834.6257</p>
   <p><a href="ebkane@sledgehammerpro.tv">Email</a></p>
-
+</div>
 
 </div>
 
