--- a/our_work.html
+++ b/our_work.html
@@ -61,7 +61,7 @@
 
 <div class="page-header">
     <div class="text-center">
-        <a href="#">Contact Us Today</a>
+        <a href="contact.html">Contact Us Today</a>
     </div>
 </div>
 
