--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <p>For more information regarding blah blah blah, contact us today!</p>
   <p>Emma Kane, production and post-production</p>
   <p>443.834.6257</p>
-  <p><a href="ebkane@sledgehammerpro.tv">Email</a></p>
+  <p><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
 </div>
 
 </div>
