--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 <div class="container"
 <div class="page-header">
   <h2>Contact Us</h2>
-  <p>For more information regarding blah blah blah, contact us today!</p>
+  <p>For more information regarding booking us for your event<br>or production, contact us today! We want to work with you.</p>
   <p>Emma Kane, production and post-production</p>
   <p>443.834.6257</p>
   <p><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
