--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,8 @@
 <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
 </div>
 
-<div class="container"
+<div class="container">
+<div class="text-center">
 <div class="page-header">
   <h2>Contact Us</h2>
   <p>For more information regarding booking us for your event<br>or production, contact us today! We want to work with you.</p>
@@ -40,7 +41,7 @@
   <p>443.834.6257</p>
   <p><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
 </div>
-
+</div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
