--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,10 @@
 
 <div class="container">
 <div class="text-center">
+<img src="img/contact.png"></img>
 <div class="page-header">
   <h2>Contact Us</h2>
+  <p>Tell us about your project and we will be glad to answer any questions that you may have.<br>We will never give away your information and there is no obligation!</p>
   <p>For more information regarding booking us for your event<br>or production, contact us today! We want to work with you.</p>
   <p>Emma Kane, production and post-production</p>
   <p>443.834.6257</p>
