--- a/contact.html
+++ b/contact.html
@@ -33,16 +33,26 @@
 </div>
 
 <div class="container">
-<img src="img/contact.png"></img>
 <div class="page-header">
 <div class="text-center">
+<img src="img/contact.png"></img>
   <h2>Contact Us</h2>
   <p>Tell us about your project and we will be glad to answer any questions that you may have.<br>We will never give away your information and there is no obligation!</p>
   <p>For more information regarding booking us for your event<br>or production, contact us today! We want to work with you.</p>
 </div>
-  <p>Emma Kane, production and post-production</p>
+<div class="col-md-3">
+  <p>Emma Kane
+  <p>Production and post-production</p>
   <p>443.834.6257</p>
   <p><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
+  <p>Sohrab Golestani
+  <p>Post-production</p>
+  <p>608.213.8096</p>
+  <p><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
+</div>
+<div class="col-md-9">
+    <img src="img/example.png"></img>
+</div>
 </div>
 </div>
 
