--- a/contact.html
+++ b/contact.html
@@ -34,24 +34,18 @@
 
 <div class="container">
 <div class="page-header">
-<div class="text-center">
-<img src="img/contact.png"></img>
-  <h2>Contact Us</h2>
-  <p>Tell us about your project and we will be glad to answer any questions that you may have.<br>We will never give away your information and there is no obligation!</p>
-  <p>For more information regarding booking us for your event<br>or production, contact us today! We want to work with you.</p>
-</div>
 <div class="col-md-3">
-  <p>Emma Kane
-  <p>Production and post-production</p>
-  <p>443.834.6257</p>
-  <p><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
-  <p>Sohrab Golestani
-  <p>Post-production</p>
-  <p>608.213.8096</p>
-  <p><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
+    <h2>Contact Us</h2>
+    <p>Tell us about your project and we will be glad to answer any questions that you may have. We will never give away your information and there is no obligation!</p>
+    <p>For more information regarding booking us for your event or production, contact us today! We want to work with you.</p>
+<br>
+  <p>Emma Kane<br>Production and post-production<br>443.834.6257<br><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
+  <p>Sohrab Golestani<br>Post-production<br>608.213.8096<br><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
 </div>
+
 <div class="col-md-9">
-    <img src="img/example.png"></img>
+    <br>
+    <img src="img/example.png" width="100%" height="50%"></img>
 </div>
 </div>
 </div>
