--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="our_work.html">Our Work</a></li>
-      <li><a href="testimonials.html">Testimonials</a></li>
-    </ul>
+<!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->
+</ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="active"><a href="contact.html">Get a Quote!</a></li>
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
