--- a/our_work.html
+++ b/our_work.html
@@ -21,8 +21,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li class="active"><a href="our_work.html">Our Work</a></li>
-      <li><a href="testimonials.html">Testimonials</a></li>
-    </ul>
+<!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->    </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="contact.html">Get a Quote!</a></li>
       <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
