--- a/index.html
+++ b/index.html
@@ -35,49 +35,47 @@
 </div>
 
 <!-- Carousel -->
-    <div class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
+<div class="container">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="http://www.vimeo.com/106895690" data-slide-to="0" class="active"></li>
+        <li data-target="http://www.vimeo.com/101581434" data-slide-to="1"></li>
+        <li data-target="https://vimeo.com/92685102" data-slide-to="2"></li>
+    </ol>
 
-        <div class="item">
-            <img src="img/BurningKumquat.gif" alt="Slide One">
-          </a>
-          <div class="carousel-caption">
-            Promote your cause.
-          </div>
-        </div>
-
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+       
         <div class="item active">
-          <img src="img/Yak.gif" alt="Slide Two">
-          <div class="carousel-caption">
-            Record your event.
-          </div>
+        <img src="img/BurningKumquat.gif">
+        <div class="carousel-caption">Promote Your Cause.</div>
+        </div>
+    
+        <div class="item">
+        <img src="img/Freeman.gif">
+        <div class="carousel-caption">Inspire Your Community.</div>
         </div>
 
         <div class="item">
-          <img src="img/Freeman.gif" alt="Slide Three">
-          <div class="carousel-caption">
-            Inspire your community.
-          </div>
-        </div>
+        <img src="img/Yak.gif">
+        <div class="carousel-caption">Record Your Event.</div>
 
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
     </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+</div>
+
 <!-- End Carousel -->
 
 <div class="page-header">
