--- a/contact.html
+++ b/contact.html
@@ -14,23 +14,23 @@
 
 <body>
  
-<div class="navbar-header">
-  <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="our_work.html">Our Work</a></li>
-<!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->
-</ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="contact.html">Get a Quote!</a></li>
-      <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
+ <div class="navbar-header">
+    <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="our_work.html">Our Work</a></li>
+            <!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="contact.html">Get a Quote!</a></li>
+            <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
+        </ul>
     </ul>
-  </ul>
-</div>
-
-<div class="jumbotron">
-<p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
-</div>
+ </div>
+ 
+ <div class="jumbotron">
+ <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+ </div>
 
 <div class="container">
 <div class="page-header">
