--- a/our_work.html
+++ b/our_work.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:15%;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
 </div>
 
 <!--This is where stuff goes-->
