--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="our_work.html">Our Work</a></li>
-<!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->
+<!-- comment out <li><a href="testimonials.html">Testimonials</a></li> -->
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="contact.html">Get a Quote!</a></li>
@@ -31,7 +31,7 @@
 </div>
 
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
 </div>
 
 <!-- Carousel -->
