--- a/testimonials.html
+++ b/testimonials.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
 </div>
 
 <div class="page-header">
