--- a/testimonials.html
+++ b/testimonials.html
@@ -30,8 +30,16 @@
   </ul>
 </div>
 
+<div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+<p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive.Capture.Create<br>Video Production and Marketing</small></h1></p>
+</div>
+</div>
+
+<div class="visible-md visible-sm visible-xs hidden-lg">
+<div class="jumbotron">
+<p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions<br><small>Video Production and Marketing</small></h1></p>
+</div>
 </div>
 
 <div class="page-header">
