--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
   </ul>
 </div>
 
+<div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="jumbotron">
-    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive, Capture, Create<br>Video Production and Marketing</small></h1></p>
+    <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions <small>Conceive.Capture.Create<br>Video Production and Marketing</small></h1></p>
+</div>
+</div>
+
+<div class="visible-md visible-sm visible-xs hidden-lg">
+<div class="jumbotron">
+<p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions<br><small>Video Production and Marketing</small></h1></p>
+</div>
 </div>
 
 <!-- Carousel -->
 
 <div class="container">
+<div class="visible-lg visible-md visible-sm">
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -73,6 +82,7 @@
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
     </a>
+</div>
 </div>
 </div>
 
