--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,19 @@
   <p>Sohrab Golestani<br>Post-production<br>608.213.8096<br><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
 </div>
 
+<div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="col-md-9">
     <br>
     <img src="img/example.png" width="100%" height="50%"></img>
+</div>
+</div>
+
+<div class="hidden-lg visible-md hidden-sm hidden-xs">
+<div class="col-md-9">
+<br><br>
+<img src="img/example.png" width="600px" height="390px"></img>
+</div>
+</div>
 </div>
 </div>
 </div>
