--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sledgehammer Projections</title>
+    <title>Sledgehammer Productions</title>
 
     <!-- CSS -->
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -15,7 +15,8 @@
   </head>
 
 <body>
- 
+
+<div class="hidden-xs">
 <div class="navbar-header">
   <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav">
@@ -29,6 +30,23 @@
     </ul>
   </ul>
 </div>
+</div>
+
+<div class="visible-xs">
+<div class="navbar-header">
+    <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Sledgehammer Productions</a></li>
+        <li><a href="our_work.html">Our Work</a></li>
+<!-- comment out <li><a href="testimonials.html">Testimonials</a></li> -->
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="contact.html">Get a Quote!</a></li>
+        <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
+    </ul>
+    </ul>
+</div>
+</div>
 
 <div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="jumbotron">
@@ -36,7 +54,7 @@
 </div>
 </div>
 
-<div class="visible-md visible-sm visible-xs hidden-lg">
+<div class="visible-md visible-sm hidden-xs hidden-lg">
 <div class="jumbotron">
 <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions<br><small>Video Production and Marketing</small></h1></p>
 </div>
