--- a/our_work.html
+++ b/our_work.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sledgehammer Projections</title>
+    <title>Sledgehammer Productions</title>
 
     <!-- CSS -->
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -16,18 +16,37 @@
 
 <body>
  
-<div class="navbar-header">
-  <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="our_work.html">Our Work</a></li>
-<!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->    </ul>
+ <div class="hidden-xs">
+ <div class="navbar-header">
+    <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="our_work.html">Our Work</a></li>
+            <!-- comment out <li class="active"><a href="testimonials.html">Testimonials</a></li> -->
+        </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="contact.html">Get a Quote!</a></li>
-      <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
+        <li><a href="contact.html">Get a Quote!</a></li>
+        <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
     </ul>
-  </ul>
-</div>
+    </ul>
+ </div>
+ </div>
+ 
+ <div class="visible-xs">
+ <div class="navbar-header">
+    <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <ul class="nav navbar-nav">
+        <li><a href="index.html">Sledgehammer Productions</a></li>
+        <li class="active"><a href="our_work.html">Our Work</a></li>
+ <!-- comment out <li><a href="testimonials.html">Testimonials</a></li> -->
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="contact.html">Get a Quote!</a></li>
+        <li><a href="http://vimeo.com/sledgehammerpro">Vimeo</a></li>
+    </ul>
+    </ul>
+ </div>
+ </div>
 
 <div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="jumbotron">
@@ -35,7 +54,7 @@
 </div>
 </div>
 
-<div class="visible-md visible-sm visible-xs hidden-lg">
+<div class="visible-md visible-sm hidden-xs hidden-lg">
 <div class="jumbotron">
 <p><img src="img/Sledge Logo blankbgrd.png" style="width:15%;height:inherit;padding:15px;float:left"</img><h1>Sledgehammer Productions<br><small>Video Production and Marketing</small></h1></p>
 </div>
@@ -43,6 +62,7 @@
 
 <!--This is where stuff goes-->
 
+<div class="hidden-xs">
 <div class="container">
     <div class="col-md-6">
         <h3>The Burning Kumquat | Washington University in St. Louis</h3>
@@ -61,9 +81,36 @@
     <br>
 
     <h3>Yak Boy Fresh | St. Louis, MO</h3>
-        <iframe src="//player.vimeo.com/video/92685102" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/92685102">Yak Boy Fresh - Pop's</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <iframe src="//player.vimeo.com/video/92685102" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/92685102">Yak Boy Fresh - Pops</a> from <a href="http://vimeo.com/sledgehammerpro">Sledgehammer Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </div>
+</div>
+</div>
 
+<div class="visible-xs">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+    <a href="http://vimeo.com/106895690">In the Spotlight: The Burning Kumquat</a>
+    <br>
+    <br>
+    <a href="http://vimeo.com/104069649">$25 Question: 7th Grade Poetry Foundation</a>
+    <br>
+    <br>
+    <a href="http://vimeo.com/101581434">These Streets, Abandoned – Freeman Word</a>
+    <br>
+    <br>
+    <a href="http://vimeo.com/92685102">Yak Boy Fresh - Pops</a>
+</div>
 </div>
 
 <div class="page-header">
