--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,35 @@
 
 <div class="container">
 <div class="page-header">
-<div class="col-md-3">
-    <h2>Contact Us</h2>
-    <p>Tell us about your project and we will be glad to answer any questions that you may have. We will never give away your information and there is no obligation!</p>
-    <p>For more information regarding booking us for your event or production, contact us today! We want to work with you.</p>
+    <div class="visible-lg visible-md visible-sm">
+    <div class="col-md-3">
+        <h2>Contact Us</h2>
+        <p>Tell us about your project and we will be glad to answer any questions that you may have. We will never give away your information and there is no obligation!</p>
+        <p>For more information regarding booking us for your event or production, contact us today! We want to work with you.</p>
 <br>
-  <p>Emma Kane<br>Production and post-production<br>443.834.6257<br><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
-  <p>Sohrab Golestani<br>Post-production<br>608.213.8096<br><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
-</div>
+        <p>Emma Kane<br>Production and post-production<br>443.834.6257<br><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
+        <p>Sohrab Golestani<br>Post-production<br>608.213.8096<br><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
+    </div>
+    </div>
+
+    <div class="visible-xs">
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>Contact Us</h2>
+        <p>Tell us about your project and we will be glad to answer any questions that you may have. We will never give away your information and there is no obligation!</p>
+        <p>For more information regarding booking us for your event or production, contact us today! We want to work with you.</p>
+<br>
+        <p>Emma Kane<br>Production and post-production<br>443.834.6257<br><a href="mailto:ebkane@sledgehammerpro.tv">Email</a></p>
+        <p>Sohrab Golestani<br>Post-production<br>608.213.8096<br><a href="mailto:sgolestani@sledgehammerpro.tv">Email</a></p>
+    </div>
+    </div>
 
 <div class="visible-lg hidden-md hidden-sm hidden-xs">
 <div class="col-md-9">
@@ -78,8 +99,8 @@
 
 <div class="hidden-lg visible-md hidden-sm hidden-xs">
 <div class="col-md-9">
-<br><br>
-<img src="img/example.png" width="600px" height="390px"></img>
+    <br><br>
+    <img src="img/example.png" width="600px" height="390px"></img>
 </div>
 </div>
 </div>
