--- a/index.html
+++ b/index.html
@@ -107,13 +107,34 @@
 <!-- End Carousel -->
 
 <div class="page-header">
+<div class="visible-lg visible-md visible-sm">
   <div class="text-center">
     <h2><em>Always fresh, never frozen.</em></h2>
     <p>Sledgehammer Productions specializes in video production and creative services for corporations, nonprofits, educational institutions, and live events. Founded by a few talented individuals where were tired of seeing the same stale, ordinary videos, Sledgehammer Productions promises a fresh, engaging take on visual media.</p>
     <p>Our mission is to work with our clients to conceieve, capture, and create unique video content.</p>
 
 <a href="contact.html">Contact Us Today</a>
-  </div>
+</div>
+</div>
+</div>
+
+<div class="visible-xs">
+<div class="text-center">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2><em>Always fresh, never frozen.</em></h2>
+<p>Sledgehammer Productions specializes in video production and creative services for corporations, nonprofits, educational institutions, and live events. Founded by a few talented individuals where were tired of seeing the same stale, ordinary videos, Sledgehammer Productions promises a fresh, engaging take on visual media.</p>
+<p>Our mission is to work with our clients to conceieve, capture, and create unique video content.</p>
+
+<a href="contact.html">Contact Us Today</a>
+</div>
+</div>
 </div>
 
 
