--- a/index.html
+++ b/index.html
@@ -106,6 +106,52 @@
 
 <!-- End Carousel -->
 
+ <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="img/BurningKumquat.gif">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Promote Your Cause</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/Freeman.gif">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Inspire Your Community</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="img/Yak.gif">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Record Your Event</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+
+
 <div class="page-header">
 <div class="visible-lg visible-md visible-sm">
   <div class="text-center">
